# hermes-module-basic-adapt

./: .gitignore  CMakeLists.txt  README.rst
cmake/: cython_test.cpp
python/: CMakeLists.txt  __init__.py  basic_adapt.cpp  basicadapt.pyx  basicadapt_defs.pxd  module-basicadapt.py
python/tests/: test_basicadapt.py
src/: CMakeLists.txt  basicadapt.cpp  basicadapt.h  main.cpp  model.cfg  read_adaptivity_data.cpp  read_model_data.cpp
src/tests/: CMakeLists.txt  main.cpp  model.cfg
ui/css/: basic-adapt.css
ui/js/: 01-femhub.module.basicadapt.window.ui.js  02-femhub.module.basic.js  module-basicadapt.xds
